Replace galoy-new-site with updated version

--- a/galoy-new-site/pages/company/contact.html
+++ b/galoy-new-site/pages/company/contact.html
@@ -89,18 +89,9 @@
                 <i data-lucide="graduation-cap"></i>
                 Bitcoin Banking 101
               </a>
-              <div class="dropdown-divider"></div>
-              <a href="../research/case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="../research/regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="../research/guides/index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides & Playbooks
               </a>
             </div>
           </li>
@@ -324,7 +315,7 @@
 
             <div style="margin-top: var(--space-6);">
               <h4 style="font-size: var(--font-size-base); margin-bottom: var(--space-2);">How long does implementation take?</h4>
-              <p class="text-sm text-grey mb-4">Implementation timelines vary based on scope. A pilot program can be live in 8-12 weeks, while full deployment typically takes 3-6 months.</p>
+              <p class="text-sm text-grey mb-4">Implementation scope is tailored to your institution's needs. Our team works closely with you from pilot through full deployment.</p>
 
               <h4 style="font-size: var(--font-size-base); margin-bottom: var(--space-2);">Do you work with banks outside the US?</h4>
               <p class="text-sm text-grey mb-4">Yes, Galoy works with financial institutions globally. Our infrastructure is designed to accommodate various regulatory frameworks.</p>
@@ -392,6 +383,7 @@
   </footer>
 
   <!-- Initialize Lucide icons -->
+  <script src="../../js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
