--- a/galoy-new-site/pages/products/cala.html
+++ b/galoy-new-site/pages/products/cala.html
@@ -89,18 +89,9 @@
                 <i data-lucide="graduation-cap"></i>
                 Bitcoin Banking 101
               </a>
-              <div class="dropdown-divider"></div>
-              <a href="../research/case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="../research/regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="../research/guides/index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides & Playbooks
               </a>
             </div>
           </li>
@@ -193,7 +184,7 @@
               <i data-lucide="zap"></i>
               <div>
                 <h4 style="margin-bottom: var(--space-2);">Ship Faster</h4>
-                <p class="mb-0 text-grey">Don't spend months building accounting infrastructure. Embed Cala and focus on your product.</p>
+                <p class="mb-0 text-grey">Skip the complexity of building accounting infrastructure from scratch. Embed Cala and focus on your product.</p>
               </div>
             </div>
 
@@ -450,6 +441,7 @@
   </footer>
 
   <!-- Initialize Lucide icons -->
+  <script src="../../js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
