--- a/galoy-new-site/pages/research/guides/index.html
+++ b/galoy-new-site/pages/research/guides/index.html
@@ -89,17 +89,9 @@
                 Bitcoin Banking 101
               </a>
               <div class="dropdown-divider"></div>
-              <a href="../case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="../regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides & Playbooks
               </a>
             </div>
           </li>
@@ -167,12 +159,8 @@
     <div class="container">
       <nav class="research-nav">
         <a href="../index.html" class="research-nav-link">All</a>
-        <a href="../case-studies/index.html" class="research-nav-link">Case Studies</a>
-        <a href="../reports/index.html" class="research-nav-link">Reports</a>
+        <a href="../bitcoin-banking-101/index.html" class="research-nav-link">Bitcoin Banking 101</a>
         <a href="../regulatory/index.html" class="research-nav-link">Regulatory Radar</a>
-        <a href="index.html" class="research-nav-link active">Guides</a>
-        <a href="../news/index.html" class="research-nav-link">News</a>
-        <a href="../engineering/index.html" class="research-nav-link">Engineering</a>
       </nav>
     </div>
   </section>
@@ -383,6 +371,7 @@
   </footer>
 
   <!-- Initialize Lucide icons -->
+  <script src="../../../js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
