--- a/galoy-new-site/index.html
+++ b/galoy-new-site/index.html
@@ -96,18 +96,9 @@
                 <i data-lucide="graduation-cap"></i>
                 Bitcoin Banking 101
               </a>
-              <div class="dropdown-divider"></div>
-              <a href="pages/research/case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="pages/research/regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="pages/research/guides/index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides &amp; Playbooks
               </a>
             </div>
           </li>
@@ -455,6 +446,7 @@
   </footer>
 
   <!-- Initialize Lucide icons -->
+  <script src="js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
