--- a/galoy-new-site/pages/research/bitcoin-banking-101/part-c.html
+++ b/galoy-new-site/pages/research/bitcoin-banking-101/part-c.html
@@ -766,18 +766,9 @@
                 <i data-lucide="graduation-cap"></i>
                 Bitcoin Banking 101
               </a>
-              <div class="dropdown-divider"></div>
-              <a href="../../research/case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="../../research/regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="../../research/guides/index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides & Playbooks
               </a>
             </div>
           </li>
@@ -1099,6 +1090,7 @@
     </div>
   </footer>
   <!-- Initialize Lucide icons -->
+  <script src="../../../js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
