--- a/galoy-new-site/pages/research/index.html
+++ b/galoy-new-site/pages/research/index.html
@@ -91,18 +91,9 @@
                 <i data-lucide="graduation-cap"></i>
                 Bitcoin Banking 101
               </a>
-              <div class="dropdown-divider"></div>
-              <a href="case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="guides/index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides & Playbooks
               </a>
             </div>
           </li>
@@ -688,6 +679,7 @@
   </footer>
 
   <!-- Initialize Lucide icons -->
+  <script src="../../js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
