--- a/galoy-new-site/pages/solutions/primary-core.html
+++ b/galoy-new-site/pages/solutions/primary-core.html
@@ -89,18 +89,9 @@
                 <i data-lucide="graduation-cap"></i>
                 Bitcoin Banking 101
               </a>
-              <div class="dropdown-divider"></div>
-              <a href="../research/case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="../research/regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="../research/guides/index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides & Playbooks
               </a>
             </div>
           </li>
@@ -430,8 +421,8 @@
             </tr>
             <tr>
               <td style="padding: var(--space-4); border-bottom: 1px solid var(--border-default);">Implementation time</td>
-              <td style="padding: var(--space-4); border-bottom: 1px solid var(--border-default); text-align: center;">3-6 months</td>
-              <td style="padding: var(--space-4); border-bottom: 1px solid var(--border-default); text-align: center;">2-4 months</td>
+              <td style="padding: var(--space-4); border-bottom: 1px solid var(--border-default); text-align: center;">Varies by scope</td>
+              <td style="padding: var(--space-4); border-bottom: 1px solid var(--border-default); text-align: center;">Varies by scope</td>
             </tr>
             <tr>
               <td style="padding: var(--space-4);">Fiat banking capabilities</td>
@@ -514,6 +505,7 @@
   </footer>
 
   <!-- Initialize Lucide icons -->
+  <script src="../../js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
