--- a/galoy-new-site/pages/solutions/sidecar.html
+++ b/galoy-new-site/pages/solutions/sidecar.html
@@ -92,18 +92,9 @@
                 <i data-lucide="graduation-cap"></i>
                 Bitcoin Banking 101
               </a>
-              <div class="dropdown-divider"></div>
-              <a href="../research/case-studies/index.html" class="dropdown-item">
-                <i data-lucide="briefcase"></i>
-                Case Studies
-              </a>
               <a href="../research/regulatory/index.html" class="dropdown-item">
                 <i data-lucide="scale"></i>
                 Regulatory Radar
-              </a>
-              <a href="../research/guides/index.html" class="dropdown-item">
-                <i data-lucide="book-marked"></i>
-                Guides & Playbooks
               </a>
             </div>
           </li>
@@ -506,6 +497,7 @@
   </footer>
 
   <!-- Initialize Lucide icons -->
+  <script src="../../js/nav.js"></script>
   <script>lucide.createIcons();</script>
 
 </body>
